Describe what you changed

--- a/index.html
+++ b/index.html
@@ -301,7 +301,24 @@
             <p class="text-yellow-300 text-xl mt-1">★★★★★</p>
           </div>
         </div>
+
+      <!-- Slide 4 -->
+      <div class="min-w-full grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="flex flex-col items-center text-center">
+          <p class="text-sm text-white mb-2">Before</p>
+          <img src="before4.jpeg" alt="Before" class="w-full object-contain max-h-[300px] rounded-md shadow" />
+        </div>
+        <div class="flex flex-col items-center text-center">
+          <p class="text-sm text-white mb-2">After</p>
+          <img src="after4.jpeg" alt="After" class="w-full object-contain max-h-[300px] rounded-md shadow" />
+        </div>
+        <div class="flex flex-col justify-center px-4 text-white">
+          <p class="text-lg italic mb-2">“GreenSpark transformed our yard—it's quiet, clean, and my weekends are back!”</p>
+          <p class="font-semibold text-base">— Amanda R., Austin, TX</p>
+          <p class="text-yellow-300 text-xl mt-1">★★★★★</p>
+        </div>
       </div>
+    </div>
 
       <!-- Arrows -->
       <div class="flex justify-center mt-10 gap-4">
