--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <nav class="hidden md:flex items-center gap-4 text-base">
           <a href="tel:1-310-528-6134" class="text-green-600 font-medium">1-310-528-6134</a>
           <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-600 hover:bg-green-50">Sign In</a>
-          <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-600 text-black px-4 py-2 rounded-full">Get an Instant Price</a>
+          <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-600 text-black px-4 py-2 rounded-full">Get Your Price</a>
           <a href="#" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full">Commercial Services</a>
         </nav>
 
@@ -49,7 +49,7 @@
       <div class="max-w-7xl mx-auto px-4 py-3 flex flex-col gap-3">
         <a href="tel:1-310-528-6134" class="text-green-700 font-medium">1-310-528-6134</a>
         <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-700 text-center">Sign In</a>
-        <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-500 text-black px-4 py-2 rounded-full text-center">Get an Instant Price</a>
+        <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-500 text-black px-4 py-2 rounded-full text-center">Get Your Price</a>
         <a href="#" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full text-center">Commercial Services</a>
       </div>
     </div>
