--- a/quote.html
+++ b/quote.html
@@ -97,7 +97,7 @@
                 <option value="weekly">Weekly</option>
                 <option value="biweekly">Biweekly</option>
               </select>
-              <p class="text-md font-semibold mt-3">Your Final Price: <span id="essentialsPrice">$45</span></p>
+              <p class="text-md font-semibold mt-3">Starting Price: <span id="essentialsPrice">$55 per visit </span></p>
               <button onclick="selectPackage('eco-essentials')" class="mt-3 w-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition rounded-full py-2 font-medium">
                 Select This Package
               </button>
@@ -171,7 +171,7 @@
                 <option value="weekly">Weekly</option>
                 <option value="biweekly">Biweekly</option>
               </select>
-              <p class="text-md font-semibold mt-3">Your Final Price: <span id="carePrice">$55</span></p>
+              <p class="text-md font-semibold mt-3">Starting Price: <span id="carePrice">$65 per visit</span></p>
               <button onclick="selectPackage('eco-care')" class="mt-3 w-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition rounded-full py-2 font-medium">
                 Select This Package
               </button>
@@ -246,7 +246,7 @@
                 <option value="weekly">Weekly</option>
                 <option value="biweekly">Biweekly</option>
               </select>
-              <p class="text-md font-semibold text-black mt-3">Your Final Price: <span id="supremePrice">$80</span></p>
+              <p class="text-md font-semibold text-black mt-3">Starting Price: <span id="supremePrice">$80 per visit</span></p>
               <button onclick="selectPackage('eco-supreme')" class="mt-3 w-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition rounded-full py-2 font-medium">
                 Select This Package
               </button>
