--- a/index.html
+++ b/index.html
@@ -412,6 +412,133 @@
       </a>
     </div>
   </section>
+  <!-- ==== Sticky Call/Book Bar (mobile) + Floating Card (desktop) ==== -->
+<div id="ctaSpacer" class="h-[72px] md:h-0"></div>
+
+<div
+  id="ctaBar"
+  class="fixed inset-x-0 bottom-0 z-[60] md:inset-auto md:right-6 md:bottom-6 md:w-[420px]
+         translate-y-full opacity-0 pointer-events-none transition-all duration-300"
+  role="dialog" aria-label="Contact GreenSpark"
+>
+  <div
+    class="mx-3 md:mx-0 rounded-2xl shadow-xl border border-green-200
+           bg-gradient-to-r from-green-400 to-green-600 text-white
+           backdrop-blur supports-[backdrop-filter]:bg-white/10
+           px-4 py-3 md:px-5 md:py-4"
+    style="padding-bottom: calc(0.75rem + env(safe-area-inset-bottom));"
+  >
+    <!-- Close / Dismiss -->
+    <button
+      id="ctaClose"
+      class="absolute right-2 top-2 md:-right-2 md:-top-2 bg-black/30 hover:bg-black/40
+             text-white rounded-full p-1.5 backdrop-blur"
+      aria-label="Dismiss contact bar"
+      title="Dismiss"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+      </svg>
+    </button>
+
+    <!-- Content -->
+    <div class="flex items-center gap-3 md:gap-4">
+      <div class="hidden md:flex items-center justify-center w-10 h-10 rounded-full bg-white/20">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 5a2 2 0 012-2h1.28a2 2 0 011.94 1.515l.57 2.28a2 2 0 01-.45 1.86l-1.2 1.2a16 16 0 006.4 6.4l1.2-1.2a2 2 0 011.86-.45l2.28.57A2 2 0 0121 18.72V20a2 2 0 01-2 2h-.25C9.268 22 2 14.732 2 6.25V6a2 2 0 011-1z"/>
+        </svg>
+      </div>
+
+      <div class="flex-1">
+        <p class="text-sm/5 md:text-xs/5 text-white/90">Questions? Ready to book?</p>
+        <p class="text-base md:text-lg font-semibold">GreenSpark: Quiet, Clean, & Green</p>
+      </div>
+
+      <div class="flex gap-2">
+        <!-- Call -->
+        <a href="tel:1-310-528-6134"
+           class="inline-flex items-center justify-center rounded-full bg-white text-green-700
+                  font-semibold px-3 py-2 md:px-4 md:py-2 shadow hover:opacity-90"
+        >
+          Call Now
+        </a>
+        <!-- Book -->
+        <a href="/GetPricing.html"
+           class="hidden md:inline-flex items-center justify-center rounded-full bg-black/20
+                  text-white font-semibold px-4 py-2 border border-white/30 hover:bg-black/30"
+        >
+          Get My Price
+        </a>
+      </div>
+    </div>
+
+    <!-- Mobile secondary button row -->
+    <div class="mt-2 grid grid-cols-2 gap-2 md:hidden px-1">
+      <a href="/GetPricing.html"
+         class="text-center rounded-full bg-black/20 text-white font-semibold py-2 border border-white/30 hover:bg-black/30">
+        Get My Price
+      </a>
+      <a href="sms:+13105286134"
+         class="text-center rounded-full bg-black/20 text-white font-semibold py-2 border border-white/30 hover:bg-black/30">
+        Text Us
+      </a>
+    </div>
+  </div>
+</div>
+
+<script>
+  (function () {
+    const bar = document.getElementById('ctaBar');
+    const spacer = document.getElementById('ctaSpacer');
+    const closeBtn = document.getElementById('ctaClose');
+
+    const LS_KEY = 'gs_cta_dismissed_until';
+
+    function isDismissed() {
+      const until = localStorage.getItem(LS_KEY);
+      return until && Date.now() < Number(until);
+    }
+
+    function showBar() {
+      bar.classList.remove('translate-y-full', 'opacity-0', 'pointer-events-none');
+      bar.classList.add('opacity-100');
+      // ensure spacer only affects mobile (bar is floating on desktop)
+      spacer.classList.add('md:h-0');
+    }
+
+    function hideBar() {
+      bar.classList.add('translate-y-full', 'opacity-0', 'pointer-events-none');
+    }
+
+    // Slide up after the user scrolls a bit and if not dismissed
+    let revealed = false;
+    function onScroll() {
+      if (revealed || isDismissed()) return;
+      if (window.scrollY > 240) {
+        revealed = true;
+        showBar();
+      }
+    }
+    window.addEventListener('scroll', onScroll, { passive: true });
+
+    // Also reveal after a small delay (helps short pages)
+    setTimeout(() => {
+      if (!revealed && !isDismissed()) {
+        revealed = true;
+        showBar();
+      }
+    }, 1800);
+
+    // Dismiss for 24h
+    closeBtn?.addEventListener('click', () => {
+      const day = 24 * 60 * 60 * 1000;
+      localStorage.setItem(LS_KEY, String(Date.now() + day));
+      hideBar();
+    });
+  })();
+</script>
+
 
 </body>
 </html>
