--- a/index.html
+++ b/index.html
@@ -13,7 +13,42 @@
     }
     /* iOS notch padding */
     :root { --safe-top: env(safe-area-inset-top); }
-  </style>
+
+    /* fixes white extra spacing on mobile */
+    /* --- NEW: clamp any horizontal overflow at the root (fixed children included) --- */
+    html, body {
+      max-width: 100%;
+      overflow-x: hidden;            /* handles fixed/absolute children that ignore body only */
+    }
+
+    /* --- NEW: make all media intrinsically responsive and block-level (no inline gaps) --- */
+    img, svg, video, canvas {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+
+    /* --- NEW: reviews slider: guarantee slide widths and avoid subpixel drift --- */
+    #reviewSlides {
+      width: 100%;
+      will-change: transform;
+    }
+    #reviewSlides > div {
+      flex: 0 0 100%;                 /* same as min-w-full, but stricter for flex items */
+      max-width: 100vw;               /* never wider than viewport on mobile */
+    }
+
+    /* --- NEW: keep tooltips from creating horizontal overflow on small screens --- */
+    .tooltip-text {
+      max-width: calc(100vw - 2rem);  /* give 1rem padding on each side of viewport */
+      word-wrap: break-word;
+    }
+
+    /* --- Optional: defensive — prevent any container from exceeding the viewport width --- */
+    .max-w-7xl, .max-w-6xl {
+      overflow-x: clip;               /* clip any accidental children overflow without scroll */
+    }
+    </style>
 </head>
 
 <body class="bg-white font-sans overflow-x-hidden">
@@ -412,6 +447,7 @@
       </a>
     </div>
   </section>
+
   <!-- ==== Sticky Call/Book Bar (mobile) + Floating Card (desktop) ==== -->
 <div id="ctaSpacer" class="h-[72px] md:h-0"></div>
 
