--- a/schedule.html
+++ b/schedule.html
@@ -13,8 +13,9 @@
 <body class="bg-white font-sans overflow-x-hidden">
   <!-- ===== Fixed Header (Responsive) ===== -->
   <header class="fixed top-0 left-0 right-0 z-50 bg-white/90 backdrop-blur border-b">
-    <div class="max-w-7xl mx-auto px-4 md:px-8">
-      <div class="h-14 md:h-16 flex items-center justify-between" style="padding-top: var(--safe-top)">
+    <!-- spacing of buttons from edges -->
+    <div class="w-full px-3 sm:px-4 lg:px-5 [padding-left:env(safe-area-inset-left)] [padding-right:env(safe-area-inset-right)]">
+        <div class="h-14 md:h-16 flex items-center justify-between overflow-x-clip" style="padding-top: var(--safe-top)">
         <!-- Brand -->
         <a href="/" class="text-2xl md:text-3xl font-semibold text-green-600 hover:opacity-90 transition">
           Green<span class="text-green-500">Spark</span>
@@ -26,6 +27,7 @@
           <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-600 hover:bg-green-50">Sign In</a>
           <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-600 text-black px-4 py-2 rounded-full">Get Your Price</a>
           <a href="#" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full">Commercial Services</a>
+          <a href="contact.html" class="px-4 py-2 bg-black rounded-full text-white hover:bg-green-400">Contact Us</a>
         </nav>
 
         <!-- Mobile Menu Button -->
