--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-700 text-center">Sign In</a>
         <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-500 text-black px-4 py-2 rounded-full text-center">Get Your Price</a>
         <a href="#" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full text-center">Commercial Services</a>
+        <a href="contact.html" class="px-4 py-2 bg-black rounded-full text-white hover:bg-green-400">Contact Us</a>
       </div>
     </div>
   </header>
