changed subheadline text color to black

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       Experience The Future of Lawn Care:<br />
       Quiet, Clean, and Green.
     </h1>
-    <p class="text-left mt-4 text-2xl text-green-800 max-w-xl">
+    <p class="text-left mt-4 text-2xl text-black max-w-xl">
       Luxury lawns without the noise or fumes. 
     </p>
     <div class="mt-8">
