--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
         <input type="text" name="_gotcha" class="hidden" tabindex="-1" autocomplete="off">
       
         <!-- Optional: Redirect after success (set to your real Thank You page) -->
-        <!-- <input type="hidden" name="_next" value="https://your-domain.com/thank-you.html"> -->
+        <input type="hidden" name="_next" value="/thank-you.html">
       
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
           <input type="text" name="name" required placeholder="Full Name*" class="border-b border-gray-400 py-2 px-1 focus:outline-none bg-transparent">
