updated info on contact page

--- a/contact.html
+++ b/contact.html
@@ -134,20 +134,20 @@
           <h3 class="text-lg font-semibold mb-1">Give us a call.</h3>
           <p class="text-sm text-gray-700 mb-1">Drop us a line and let's connect.</p>
           <p class="text-sm text-gray-600 mb-3"><strong>Mon – Fri:</strong> 7:30 AM – 8:00 PM<br><strong>Sat:</strong> 8:30 AM – 6:00 PM<br><strong>Sun:</strong> Closed</p>
-          <a href="tel:1-844-813-0697" class="inline-block bg-green-400 hover:bg-green-500 text-black font-semibold px-5 py-2 rounded-full">1-844-813-0697</a>
+          <a href="tel:1-310-528-6134" class="inline-block bg-green-400 hover:bg-green-500 text-black font-semibold px-5 py-2 rounded-full">1-310-528-6134</a>
         </div>
 
         <!-- Text -->
         <div class="bg-green-50 p-5 rounded-xl">
           <h3 class="text-lg font-semibold mb-1">Send us a Text</h3>
-          <a href="sms:1-888-781-3135" class="inline-block bg-green-400 hover:bg-green-500 text-black font-semibold px-5 py-2 rounded-full">1-888-781-3135</a>
+          <a href="sms:1-310-528-6134" class="inline-block bg-green-400 hover:bg-green-500 text-black font-semibold px-5 py-2 rounded-full">1-310-528-6134</a>
         </div>
 
         <!-- Email -->
         <div class="bg-green-50 p-5 rounded-xl">
           <h3 class="text-lg font-semibold mb-1">Email us.</h3>
           <p class="text-sm text-gray-700 mb-3">Send us your compliments, suggestions, questions, and more. We’ll get back to you in 1–2 business days.</p>
-          <a href="mailto:support@greenspark.com" class="inline-block bg-green-400 hover:bg-green-500 text-black font-semibold px-5 py-2 rounded-full">Email Us</a>
+          <a href="#emailform" id="jumpToEmail" class="inline-block bg-green-400 hover:bg-green-500 text-black font-semibold px-5 py-2 rounded-full"> Email Us </a>
         </div>
       </div>
 
@@ -259,12 +259,14 @@
             <option>Scheduling</option>
             <option>Billing</option>
             <option>Technical Issue</option>
+            <option>Other</option>
           </select>
           <select name="topic" required class="border-b border-gray-400 py-2 px-1 bg-transparent">
             <option value="" disabled selected>Topic*</option>
             <option>General Inquiry</option>
             <option>Service Request</option>
             <option>Complaint</option>
+            <option>Other</option>
           </select>
         </div>
       
