--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Landing Page - Lawn Care</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    html { scroll-behavior: smooth; }
+
     .tooltip:hover .tooltip-text {
       opacity: 1;
       visibility: visible;
@@ -136,39 +138,52 @@
   <!-- (Removed the three stray </div></div></section> that were here) -->
 
   <!-- ===== How It Works ===== -->
-  <section class="w-full bg-white pt-8 py-12">
-    <div class="max-w-6xl mx-auto text-center px-1">
-      <h2 class="text-3xl font-medium mb-2">How GreenSpark Works</h2>
-      <p class="text-lg font-medium text-green-600 mb-6">Get started in under 5 minutes</p>
-      <div class="flex flex-col md:flex-row justify-between items-center space-y-6 md:space-y-0 md:space-x-4">
-
+  <section class="py-16 bg-white">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+      <h2 class="text-3xl font-bold text-center mb-2">How GreenSpark Works</h2>
+      <p class="text-green-600 text-center mb-12">Get started in under 5 minutes</p>
+  
+      <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+        
         <!-- Step 1 -->
-        <div class="flex flex-col items-center text-center">
-          <div class="w-10 h-10 md:w-12 md:h-12 flex items-center justify-center rounded-full bg-green-100 text-green-600 text-2xl font-medium mb-2">1</div>
-          <img src="view_your_price_icon.png" alt="View Pricing" class="w-20 h-20 md:w-28 md:h-28 mb-3" />
-          <p class="text-base font-medium">View Your Pricing</p>
+        <div class="bg-white rounded-xl shadow-md p-6 text-center hover:shadow-lg transition">
+          <div class="flex justify-center mb-4">
+            <span class="w-10 h-10 flex items-center justify-center rounded-full bg-green-100 text-green-600 font-bold">1</span>
+          </div>
+          <img src="view_your_price_icon.png" alt="GreenSpark Pricing" class="mx-auto mb-4 h-20">
+          <h3 class="text-lg font-semibold mb-2">View Your Pricing</h3>
+          <p class="text-gray-600 text-sm">Enter your address and instantly see your exact price, no surprises.</p>
         </div>
-
-        <div class="hidden md:block h-1 bg-green-400 w-24"></div>
-
+  
         <!-- Step 2 -->
-        <div class="flex flex-col items-center text-center">
-          <div class="w-10 h-10 md:w-12 md:h-12 flex items-center justify-center rounded-full bg-green-100 text-green-600 text-2xl font-medium mb-2">2</div>
-          <img src="choose_service_date_icon.png" alt="Choose Date" class="w-20 h-20 md:w-28 md:h-28 mb-3" />
-          <p class="text-base font-medium">Choose Your Service Date</p>
+        <div class="bg-white rounded-xl shadow-md p-6 text-center hover:shadow-lg transition">
+          <div class="flex justify-center mb-4">
+            <span class="w-10 h-10 flex items-center justify-center rounded-full bg-green-100 text-green-600 font-bold">2</span>
+          </div>
+          <img src="choose_service_date_icon.png" alt="Service Date" class="mx-auto mb-4 h-20">
+          <h3 class="text-lg font-semibold mb-2">Choose Your Service Date</h3>
+          <p class="text-gray-600 text-sm">Pick a date that works best for you — most jobs start within 48 hours.</p>
         </div>
-
-        <div class="hidden md:block h-1 bg-green-400 w-24"></div>
-
+  
         <!-- Step 3 -->
-        <div class="flex flex-col items-center text-center">
-          <div class="w-10 h-10 md:w-12 md:h-12 flex items-center justify-center rounded-full bg-green-100 text-green-600 text-2xl font-medium mb-2">3</div>
-          <img src="let_pros_work_icon.png" alt="Let the pros do the work" class="w-20 h-20 md:w-28 md:h-28 mb-3" />
-          <p class="text-base font-medium">Sit Back and Let Our Pros do The Work</p>
+        <div class="bg-white rounded-xl shadow-md p-6 text-center hover:shadow-lg transition">
+          <div class="flex justify-center mb-4">
+            <span class="w-10 h-10 flex items-center justify-center rounded-full bg-green-100 text-green-600 font-bold">3</span>
+          </div>
+          <img src="let_pros_work_icon.png" alt="Pros at Work" class="mx-auto mb-4 h-20">
+          <h3 class="text-lg font-semibold mb-2">Sit Back and Let Our Pros do The Work</h3>
+          <p class="text-gray-600 text-sm">
+            Our pros handle everything, backed by our
+            <a href="#guarantee" class="text-green-600 hover:underline">100% Satisfaction Guarantee</a>.
+          </p>
+          
         </div>
+  
       </div>
     </div>
   </section>
+  
+  
 
   <!-- ===== Why GreenSpark ===== -->
   <section class="w-full bg-white py-16 px-2 md:px-6 lg:px-8">
@@ -406,7 +421,7 @@
   </script>
 
   <!-- ===== Premium Guarantee ===== -->
-  <section class="bg-white py-16 px-6 md:px-20 border-t border-gray-200">
+  <section id="guarantee" class="bg-white py-16 px-6 md:px-20 border-t border-gray-200">
     <div class="max-w-6xl mx-auto text-center">
       <div class="flex justify-center items-center gap-6 mb-6 flex-wrap text-green-600">
         <div class="flex items-center gap-2">
