--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         <!-- Item 2 -->
         <div class="flex items-start space-x-3 relative group">
-          <img src="icons/breathe_easier.png" alt="Breathe Easier, Live Healthier" class="w-10 h-10 mt-1 shrink-0" />
+          <img src="icons/breathe4.png" alt="Breathe Easier, Live Healthier" class="w-10 h-10 mt-1 shrink-0" />
           <div>
             <div class="flex items-center gap-1">
               <h3 class="font-semibold mb-1">Breathe Easier, Live Healthier</h3>
@@ -261,10 +261,10 @@
 
         <!-- Item 5 -->
         <div class="flex items-start space-x-3 relative group">
-          <img src="icons/licensed.png" alt="Licensed, Insured, Bonded" class="w-10 h-10 mt-1 shrink-0" />
+          <img src="icons/licensed3.png" alt="Licensed, Insured, Bonded" class="w-10 h-10 mt-1 shrink-0" />
           <div>
             <div class="flex items-center gap-1">
-              <h3 class="font-semibold mb-1">Licensed, Insured, Bonded</h3>
+              <h3 class="font-semibold mb-1">Licensed, Bonded, & Insured</h3>
               <div class="relative tooltip cursor-pointer">
                 <span class="text-xs text-gray-500 border border-gray-300 rounded-full px-1">i</span>
                 <div class="tooltip-text absolute left-4 top-6 bg-white border border-gray-300 text-xs text-gray-700 rounded-md shadow px-3 py-2 w-64 z-10 opacity-0 invisible transform -translate-y-1 transition-all duration-200">
