--- a/index.html
+++ b/index.html
@@ -527,27 +527,26 @@
     </div>
   </section>
 
-  <!-- ==== Sticky Call/Book Bar (mobile) + Floating Card (desktop) ==== -->
-<div id="ctaSpacer" class="h-[72px] md:h-0"></div>
+  <!-- ==== Slim Sticky CTA (mobile only) ==== -->
+<div id="ctaSpacer" class="h-[64px] md:h-0"></div>
 
 <div
   id="ctaBar"
-  class="fixed inset-x-0 bottom-0 z-[60] md:inset-auto md:right-6 md:bottom-6 md:w-[420px]
+  class="fixed inset-x-0 bottom-0 z-[60] md:hidden
          translate-y-full opacity-0 pointer-events-none transition-all duration-300"
   role="dialog" aria-label="Contact GreenSpark"
 >
   <div
-    class="mx-3 md:mx-0 rounded-2xl shadow-xl border border-green-200
-           bg-gradient-to-r from-green-400 to-green-600 text-white
-           backdrop-blur supports-[backdrop-filter]:bg-white/10
-           px-4 py-3 md:px-5 md:py-4"
-    style="padding-bottom: calc(0.75rem + env(safe-area-inset-bottom));"
+    class="mx-3 mb-3 rounded-2xl shadow-xl border border-white/20
+           bg-black/70 backdrop-blur px-3 py-2
+           text-white"
+    style="padding-bottom: calc(0.25rem + env(safe-area-inset-bottom));"
   >
-    <!-- Close / Dismiss -->
+    <!-- Dismiss -->
     <button
       id="ctaClose"
-      class="absolute right-2 top-2 md:-right-2 md:-top-2 bg-black/30 hover:bg-black/40
-             text-white rounded-full p-1.5 backdrop-blur"
+      class="absolute right-4 -top-3 bg-black/60 hover:bg-black/80
+             text-white rounded-full p-1 shadow"
       aria-label="Dismiss contact bar"
       title="Dismiss"
     >
@@ -556,51 +555,31 @@
       </svg>
     </button>
 
-    <!-- Content -->
-    <div class="flex items-center gap-3 md:gap-4">
-      <div class="hidden md:flex items-center justify-center w-10 h-10 rounded-full bg-white/20">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+    <!-- Two-button row -->
+    <div class="grid grid-cols-2 gap-2">
+      <a href="tel:1-310-528-6134"
+         class="inline-flex items-center justify-center rounded-xl bg-white text-green-700
+                font-semibold py-3 shadow hover:opacity-90">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M3 5a2 2 0 012-2h1.28a2 2 0 011.94 1.515l.57 2.28a2 2 0 01-.45 1.86l-1.2 1.2a16 16 0 006.4 6.4l1.2-1.2a2 2 0 011.86-.45l2.28.57A2 2 0 0121 18.72V20a2 2 0 01-2 2h-.25C9.268 22 2 14.732 2 6.25V6a2 2 0 011-1z"/>
+                d="M3 5a2 2 0 012-2h1.3a2 2 0 011.9 1.6l.6 2.3a2 2 0 01-.5 1.8l-1.2 1.2a16 16 0 006.4 6.4l1.2-1.2a2 2 0 011.8-.5l2.3.6A2 2 0 0121 18.7V20a2 2 0 01-2 2h-.3C9.3 22 2 14.7 2 6.3V6a2 2 0 011-1z"/>
         </svg>
-      </div>
-
-      <div class="flex-1">
-        <p class="text-sm/5 md:text-xs/5 text-white/90">Questions? Ready to book?</p>
-        <p class="text-base md:text-lg font-semibold">GreenSpark: Quiet, Clean, & Green</p>
-      </div>
-
-      <div class="flex gap-2">
-        <!-- Call -->
-        <a href="tel:1-310-528-6134"
-           class="inline-flex items-center justify-center rounded-full bg-white text-green-700
-                  font-semibold px-3 py-2 md:px-4 md:py-2 shadow hover:opacity-90"
-        >
-          Call Now
-        </a>
-        <!-- Book -->
-        <a href="/GetPricing.html"
-           class="hidden md:inline-flex items-center justify-center rounded-full bg-black/20
-                  text-white font-semibold px-4 py-2 border border-white/30 hover:bg-black/30"
-        >
-          Get My Price
-        </a>
-      </div>
-    </div>
-
-    <!-- Mobile secondary button row -->
-    <div class="mt-2 grid grid-cols-2 gap-2 md:hidden px-1">
-      <a href="/GetPricing.html"
-         class="text-center rounded-full bg-black/20 text-white font-semibold py-2 border border-white/30 hover:bg-black/30">
-        Get My Price
+        Call Us
       </a>
+
       <a href="sms:+13105286134"
-         class="text-center rounded-full bg-black/20 text-white font-semibold py-2 border border-white/30 hover:bg-black/30">
+         class="inline-flex items-center justify-center rounded-xl bg-green-400 text-black
+                font-semibold py-3 border border-green-300 shadow hover:bg-green-500">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M8 10h8M8 14h5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+        </svg>
         Text Us
       </a>
     </div>
   </div>
 </div>
+
 
 <script>
   (function () {
@@ -645,10 +624,10 @@
       }
     }, 1800);
 
-    // Dismiss for 24h
+    // Dismiss for 10 minutes
     closeBtn?.addEventListener('click', () => {
-      const day = 24 * 60 * 60 * 1000;
-      localStorage.setItem(LS_KEY, String(Date.now() + day));
+      const tenMinutes = 10 * 60 * 1000;
+      localStorage.setItem(LS_KEY, String(Date.now() + tenMinutes));
       hideBar();
     });
   })();
