--- a/sign_in.html
+++ b/sign_in.html
@@ -140,6 +140,27 @@
   });
 </script>
 
+<script>
+  // Hamburger → drawer toggle
+  (function () {
+    const btn = document.getElementById('menuBtn');
+    const nav = document.getElementById('mobileNav');
+    if (!btn || !nav) return;
+
+    btn.addEventListener('click', () => {
+      nav.classList.toggle('hidden');
+      document.body.classList.toggle('overflow-hidden'); // prevent scroll when open (optional)
+    });
+
+    // Close when a link is tapped (optional)
+    nav.querySelectorAll('a').forEach(a =>
+      a.addEventListener('click', () => {
+        nav.classList.add('hidden');
+        document.body.classList.remove('overflow-hidden');
+      })
+    );
+  })();
+</script>
 
 
 
