--- a/turf.html
+++ b/turf.html
@@ -182,9 +182,9 @@
       <p class="text-gray-700 mb-10">See the difference GreenSpark makes. Every project is custom, durable, and guaranteed.</p>
       <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
         <!-- Replace placeholders with your turf project images -->
-        <img src="turf1.jpg" alt="Turf project 1" class="rounded-xl shadow" />
-        <img src="turf2.jpg" alt="Turf project 2" class="rounded-xl shadow" />
-        <img src="turf3.jpg" alt="Turf project 3" class="rounded-xl shadow" />
+        <img src="stitch1.png" alt="Turf project 1" class="rounded-xl shadow" />
+        <img src="stitch2.png" alt="Turf project 2" class="rounded-xl shadow" />
+        <img src="turf_proj1.jpeg" alt="Turf project 3" class="rounded-xl shadow" />
         <img src="turf4.jpg" alt="Turf project 4" class="rounded-xl shadow" />
         <img src="turf5.jpg" alt="Turf project 5" class="rounded-xl shadow" />
         <img src="turf6.jpg" alt="Turf project 6" class="rounded-xl shadow" />
