--- a/turf.html
+++ b/turf.html
@@ -39,11 +39,11 @@
             <div
               class="invisible opacity-0 translate-y-2 group-hover:visible group-hover:opacity-100 group-hover:translate-y-0 focus-within:visible focus-within:opacity-100 focus-within:translate-y-0 transition-all
                      absolute left-0 mt-2 w-72 rounded-2xl border bg-white shadow-lg p-2">
-              <a href="/services/turf" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
+              <a href="turf.html" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
               <a href="/services/landscape-design" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Landscape Design</a>
               <a href="/services/sprinkler-installation" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sprinkler Installation</a>
               <a href="/services/seasonal-services" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Seasonal Services</a>
-              <a href="/services/sod-seeding" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sod &amp; Seeding</a>
+              <a href="sod-and-seeding.html" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sod &amp; Seeding</a>
               <a href="/services/lawn-maintenance" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Lawn Maintenance</a>
             </div>
           </div>
@@ -80,11 +80,11 @@
             </svg>
           </button>
           <div class="hidden pb-2" data-accordion-panel>
-            <a href="/services/turf" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Turf</a>
+            <a href="turf.html" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Turf</a>
             <a href="/services/landscape-design" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Landscape Design</a>
             <a href="/services/sprinkler-installation" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sprinkler Installation</a>
             <a href="/services/seasonal-services" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Seasonal Services</a>
-            <a href="/services/sod-seeding" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sod &amp; Seeding</a>
+            <a href="sod-and-seeding.html" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sod &amp; Seeding</a>
             <a href="/services/lawn-maintenance" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Lawn Maintenance</a>
           </div>
         </div>
@@ -102,7 +102,7 @@
 
   <!-- ===== Hero Section ===== -->
   <section class="relative bg-green-600 text-white">
-    <img src="hero1.png" alt="Beautiful lawn with turf installation"
+    <img src="turf-images/hero1.png" alt="Beautiful lawn with turf installation"
          class="absolute inset-0 w-full h-full object-cover opacity-70" />
     <div class="relative max-w-6xl mx-auto px-6 py-20 text-center">
       <h1 class="text-4xl md:text-6xl font-bold drop-shadow-lg">Expert Turf Installation</h1>
