--- a/sign_up.html
+++ b/sign_up.html
@@ -48,7 +48,7 @@
             <a href="/services/landscape-design" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Landscape Design</a>
             <a href="/services/sprinkler-installation" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sprinkler Installation</a>
             <a href="/services/seasonal-services" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Seasonal Services</a>
-            <a href="/services/sod-seeding" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sod &amp; Seeding</a>
+            <a href="sod-and-seeding.html" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sod &amp; Seeding</a>
             <a href="/services/lawn-maintenance" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Lawn Maintenance</a>
           </div>
         </div>
@@ -89,7 +89,7 @@
           <a href="/services/landscape-design" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Landscape Design</a>
           <a href="/services/sprinkler-installation" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sprinkler Installation</a>
           <a href="/services/seasonal-services" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Seasonal Services</a>
-          <a href="/services/sod-seeding" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sod &amp; Seeding</a>
+          <a href="sod-and-seeding.html" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sod &amp; Seeding</a>
           <a href="/services/lawn-maintenance" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Lawn Maintenance</a>
         </div>
       </div>
